<resources>
    <string name="app_name">偉大嘅紅登討論區</string>
    <string name="app_name_short">紅登</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_thread">ThreadActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_profile">Profile</string>
    <string name="avatar">Profile picture</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm password</string>
    <string name="submit">Submit</string>
    <string name="menu_add_comment">Comment</string>
    <string name="menu_save_post">Save Post</string>
    <string name="menu_prev_page">Previous page</string>
    <string name="menu_next_page">Next page</string>
    <string name="title_activity_reply">replyActivity</string>
    <string name="comment">Comment</string>
    <string name="bold">Bold</string>
    <string name="italic">Italic</string>
    <string name="underline">Underline</string>
    <string name="align_left">Align Left</string>
    <string name="align_center">Align Center</string>
    <string name="align_right">Align Right</string>
    <string name="member">Member</string>
    <!--DropDownListItems-->
    <string-array name="dropDownList">
        <item name="chatToy">吹水台</item>
        <item name="ccToy">時事台</item>
        <item name="creativeToy">創意台</item>
        <item name="hardwareToy">硬件台</item>
        <item name="academicToy">學術台</item>
        <item name="childrenToy">兒童台</item>
    </string-array>
</resources>
