<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.google.firebase.auth.FirebaseAuth" />

        <variable
            name="profile"
            type="hk.edu.hkbu.comp.lab01.ProfileViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ProfileActivity"
        tools:showIn="@layout/activity_profile">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/avatar"
            android:src="@android:drawable/picture_frame"
            android:visibility='@{profile.photoUrl == "" ? View.GONE : View.VISIBLE}'
            app:imageUrl='@{profile.photoUrl}' />

        <EditText
            android:id="@+id/display_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/display_name"
            android:inputType="text"
            android:text='@={profile.displayName}' />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:text='@={profile.email}'
            android:visibility='@{FirebaseAuth.getInstance().currentUser == null ? View.VISIBLE : View.GONE}' />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text='@={profile.password}'
            android:visibility='@{FirebaseAuth.getInstance().currentUser == null ? View.VISIBLE : View.GONE}' />

        <EditText
            android:id="@+id/password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_confirm"
            android:inputType="textPassword"
            android:text='@={profile.passwordConfirm}'
            android:visibility='@{FirebaseAuth.getInstance().currentUser == null ? View.VISIBLE : View.GONE}' />
    </LinearLayout>
</layout>